crates/core-executor/src/tests/sql/ddl/snapshots/volume/query_file.snap
---
source: crates/core-executor/src/tests/sql/ddl/volume.rs
description: "\"SELECT * FROM slatedb.meta.volumes\""
info: "Setup queries: CREATE EXTERNAL VOLUME file STORAGE_LOCATIONS = ((NAME = 'file_vol' STORAGE_PROVIDER = 'FILE' STORAGE_BASE_URL = '/home/'))"
---
Ok(
    [
        "+-------------+-------------+-------------------------------+-------------------------------+",
        "| volume_name | volume_type | created_at                    | updated_at                    |",
        "+-------------+-------------+-------------------------------+-------------------------------+",
        "| file        | file        | 2025-07-30 23:13:38.460334043 | 2025-07-30 23:13:38.460334043 |",
        "| test_volume | memory      | 2025-07-30 23:13:34.659385885 | 2025-07-30 23:13:34.659385885 |",
        "+-------------+-------------+-------------------------------+-------------------------------+",
    ],
)
