crates/core-executor/src/tests/sql/ddl/snapshots/volume/query_memory.snap
---
source: crates/core-executor/src/tests/sql/ddl/volume.rs
description: "\"SELECT * FROM slatedb.meta.volumes\""
info: "Setup queries: CREATE EXTERNAL VOLUME mem STORAGE_LOCATIONS = ((NAME = 'mem_vol' STORAGE_PROVIDER = 'MEMORY'))"
---
Ok(
    [
        "+-------------+-------------+-------------------------------+-------------------------------+",
        "| volume_name | volume_type | created_at                    | updated_at                    |",
        "+-------------+-------------+-------------------------------+-------------------------------+",
        "| mem         | memory      | 2025-07-30 23:13:38.460335582 | 2025-07-30 23:13:38.460335582 |",
        "| test_volume | memory      | 2025-07-30 23:13:34.659206645 | 2025-07-30 23:13:34.659206645 |",
        "+-------------+-------------+-------------------------------+-------------------------------+",
    ],
)
