crates/core-executor/src/tests/sql/ddl/snapshots/volume/query_memory_if_not_exists.snap
---
source: crates/core-executor/src/tests/sql/ddl/volume.rs
description: "\"SELECT volume_name, volume_type FROM slatedb.meta.volumes\""
info: "Setup queries: CREATE EXTERNAL VOLUME mem STORAGE_LOCATIONS = ((NAME = 'mem_vol' STORAGE_PROVIDER = 'MEMORY')); CREATE EXTERNAL VOLUME IF NOT EXISTS mem STORAGE_LOCATIONS = ((NAME = 'mem_vol' STORAGE_PROVIDER = 'MEMORY'))"
---
Ok(
    [
        "+-------------+-------------+",
        "| volume_name | volume_type |",
        "+-------------+-------------+",
        "| mem         | memory      |",
        "| test_volume | memory      |",
        "+-------------+-------------+",
    ],
)
