crates/core-executor/src/tests/sql/ddl/snapshots/volume/query_s3.snap
---
source: crates/core-executor/src/tests/sql/ddl/volume.rs
description: "\"SELECT * FROM slatedb.meta.volumes\""
info: "Setup queries: CREATE EXTERNAL VOLUME s3 STORAGE_LOCATIONS = ((\n            NAME = 's3-volume' STORAGE_PROVIDER = 'S3'\n            STORAGE_BASE_URL = 'bucket_name'\n            STORAGE_ENDPOINT = 'https://s3.us-east-2.amazonaws.com'\n            CREDENTIALS=(AWS_KEY_ID='1a2b3c...' AWS_SECRET_KEY='4x5y6z...')\n        ))"
---
Ok(
    [
        "+-------------+-------------+-------------------------------+-------------------------------+",
        "| volume_name | volume_type | created_at                    | updated_at                    |",
        "+-------------+-------------+-------------------------------+-------------------------------+",
        "| s3          | s3          | 2025-07-30 23:13:38.463359087 | 2025-07-30 23:13:38.463359087 |",
        "| test_volume | memory      | 2025-07-30 23:13:34.659278455 | 2025-07-30 23:13:34.659278455 |",
        "+-------------+-------------+-------------------------------+-------------------------------+",
    ],
)
