crates/core-executor/src/tests/sql/ddl/snapshots/volume/query_s3tables.snap
---
source: crates/core-executor/src/tests/sql/ddl/volume.rs
description: "\"SELECT * FROM slatedb.meta.volumes\""
info: "Setup queries: SET DISABLE_S3TABLES_CATALOG_CREATION = true; CREATE EXTERNAL VOLUME s3 STORAGE_LOCATIONS = ((\n            NAME = 's3-volume' STORAGE_PROVIDER = 'S3TABLES'\n            STORAGE_ENDPOINT = 'https://s3.us-east-2.amazonaws.com'\n            STORAGE_AWS_ACCESS_POINT_ARN = 'arn:aws:s3tables:us-east-2:767397688925:bucket/yaro-bucket'\n            CREDENTIALS=(AWS_KEY_ID='1a2b3c...' AWS_SECRET_KEY='4x5y6z...' DATABASE_NAME='yaro_db')\n        ))"
---
Ok(
    [
        "+-------------+-------------+-------------------------------+-------------------------------+",
        "| volume_name | volume_type | created_at                    | updated_at                    |",
        "+-------------+-------------+-------------------------------+-------------------------------+",
        "| s3          | s3_tables   | 2025-07-30 23:13:38.378852714 | 2025-07-30 23:13:38.378852714 |",
        "| test_volume | memory      | 2025-07-30 23:13:34.659156119 | 2025-07-30 23:13:34.659156119 |",
        "+-------------+-------------+-------------------------------+-------------------------------+",
    ],
)
